--- a/.gitignore
+++ b/.gitignore
@@ -160,11 +160,8 @@ UpgradeLog*.htm
 # Remainings from resolving conflicts in Source Control
 *.orig
 
-# SQL Server files
-**/App_Data/*.mdf
-**/App_Data/*.ldf
-**/App_Data/*.sdf
-
+**/Assets/SourceFiles
+**/Assets/OutputFiles
 
 #LightSwitch generated files
 GeneratedArtifacts/
